# coverage_planner

./: CMakeLists.txt  README.md  demo_video.webm
include/: map_generator.h  planner.h  visualizer.h
src/: main.cpp  map_generator.cpp  planner.cpp  visualizer.cpp
